# simple-game-lib

./: CMakeLists.txt  README.md
os-terminal/: CMakeLists.txt
os-terminal/include/: ITerminal.h  LinuxTerminal.h  OSTerminal.h  WinTerminal.h
os-terminal/src/: LinuxTerminal.cpp  WinTerminal.cpp
